Added Spring block switch extension to make different tabs (ex: Linux, macOS, Windows)

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>webfx-docs</artifactId>
     <version>0.1.0-SNASHOT</version>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repository.spring.release</id>
+            <name>Spring GA Repository</name>
+            <url>https://repo.spring.io/release</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <build>
         <plugins>
             <plugin>
@@ -19,6 +27,11 @@
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctorj-pdf</artifactId>
                         <version>1.6.2</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>io.spring.asciidoctor</groupId>
+                        <artifactId>spring-asciidoctor-extensions-block-switch</artifactId>
+                        <version>0.6.0</version>
                     </dependency>
                 </dependencies>
                 <executions>
