--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
                         <artifactId>asciidoctorj-diagram</artifactId>
                         <version>2.2.1</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.jruby</groupId>
+                        <artifactId>jruby-complete</artifactId>
+                        <version>9.2.20.1</version>
+                    </dependency>
                 </dependencies>
                 <configuration>
                     <attributes>
