--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: sudo apt update; sudo apt install graphviz
 
       - name: Install Pygments
-        run: sudo apt install -y ruby-pygments.rb
+        run: gem install pygments.rb
 
       # Checkout this repository
       - name: Checkout this repository
