--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <parent>
+        <groupId>dev.webfx</groupId>
+        <artifactId>webfx-parent</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.webfx</groupId>
@@ -55,6 +62,7 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
+                            <preserveDirectories>true</preserveDirectories>
                             <outputFile>index.html</outputFile>
                         </configuration>
                     </execution>
@@ -65,6 +73,7 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
+                            <preserveDirectories>true</preserveDirectories>
                             <backend>pdf</backend>
                         </configuration>
                     </execution>
