--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-.idea
+### Maven
+target/
+
+### Java
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs
+hs_err_pid*
+
+### JetBrains IntelliJ IDEA
+
+/out/
+
+# User-specific stuff:
+.idea/
+
+## File-based project format:
+*.ipr
+*.iws
+*.iml
