--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <parent>
+        <groupId>dev.webfx</groupId>
+        <artifactId>webfx-parent</artifactId>
+        <version>0.1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.webfx</groupId>
     <artifactId>webfx-docs</artifactId>
     <version>0.1.0-SNASHOT</version>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repository.spring.release</id>
-            <name>Spring GA Repository</name>
-            <url>https://repo.spring.io/release</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <build>
         <plugins>
@@ -32,7 +30,7 @@
                     <dependency>
                         <groupId>io.spring.asciidoctor</groupId>
                         <artifactId>spring-asciidoctor-extensions-block-switch</artifactId>
-                        <version>0.6.0</version>
+                        <version>0.6.1</version>
                     </dependency>
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
